# Arduino-Uno-Cmake-Starter-Template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: Arduino-EXE.cmake  Arduino-toolchain.cmake
src/: Application.cpp  Application.h  CMakeLists.txt  loop.cpp  loop.hpp  main.cpp  setup.cpp  setup.hpp
